nova (2011.3~d1-0ubuntu2) UNRELEASED; urgency=low

  [ Dan Prince ]
  * Added python-lxml to python-nova build-deps.

  [ Thomas Goirand ]
  * Add copyright info for ipv6 class for boto.

  [ Soren Hansen ]
  * Add parted to sudoers file.
  * Add Depends: python-simplejson and Conflicts: python-cjson due to
    bug #800465 which caused the test suite to fail.
  * Remove nova-instancemonitor package (dropped upstream).
  * Remove twisted dependency (dropped upstream).

  [ Thierry Carrez (ttx) ]
  * Added python-xattr to build deps, apprently this is now needed
  * Removed python-xattr from build deps, now that python-glance properly
    depends on it
  * Added radvd to nova_sudoers file (LP: #758072)
  * Make nova.conf non-world-readable, as it may contain DB passwords
    (LP: #798878)

  [ Brian Waldon ]
  * Remove nova-instancemonitor man page stub.
  * Remove nova-instancemonitor from apport hook.

  [ Monty Taylor ]
  * Added python-lxml to build-deps.

 -- Monty Taylor <mordred@inaugust.com>  Tue, 02 Aug 2011 15:55:40 -0700

nova (2011.3~d1-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream version.

  [Soren Hansen]
  * libvirt plugin was refactored. Adjust ajaxterm patch accordingly.
  * Add /sbin/brctl to sudoers (it moved from /usr/sbin to /sbin in
    Oneiric).
  * Add dependencies on dnsmasq-base and bridge-utils to nova-network.
    (LP: #790661)

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 02 Jun 2011 09:30:39 -0400

nova (2011.3~bzr1108-0ubuntu1) oneiric; urgency=low

  [ Thomas Goirand ]
  * Removes embedded jquery.js from nova-doc package.
  * Added some manpages stubs to make package lintian clean.
  * Adds a nova-volume.default where the admin can decide what VG to use.
  * debian/nova-objectstore.logrotate working in Debian.
  * Do not have debian/*.upstart files in Debian. Using debian/*.upstart.in
  and copying them as .upstart only if building in Ubuntu.
  * Nova init files reviewed so that they are working in Debian.