@@ -1,6 +1,7 @@
 nova (2011.3~d1-0ubuntu2) UNRELEASED; urgency=low
 
   [ Dan Prince ]
+  * Updated the ajaxterm patch to work with latest nova code (privsep)
   * Added python-lxml to python-nova build-deps.
 
   [ Thomas Goirand ]
